force-app/main/default/objects/Response_Plan__c/Response_Plan__c.object-meta.xml
<CustomObject>
    <description>Versioned AI response plan for an emergency incident.</description>
    <label>Response Plan</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Response Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>