force-app/main/default/objects/Response_Plan__c/fields/AI_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommendation__c</fullName>
    <label>AI Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>