force-app/main/default/objects/Response_Plan__c/fields/Estimated_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Coverage__c</fullName>
    <label>Estimated Coverage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>