force-app/main/default/objects/Response_Plan__c/fields/Estimated_ETA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_ETA_Hours__c</fullName>
    <label>Estimated ETA Hours</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>