force-app/main/default/objects/Response_Plan__c/fields/Plan_Version__c.field-meta.xml
<CustomField>
    <fullName>Plan_Version__c</fullName>
    <label>Plan Version</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>