force-app/main/default/objects/Response_Plan__c/fields/Total_Resources__c.field-meta.xml
<CustomField>
    <fullName>Total_Resources__c</fullName>
    <label>Total Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>