force-app/main/default/objects/Response_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Plan_Version__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Total_Resources__c</columns>
    <columns>Incident__c</columns>
    <columns>Estimated_ETA_Hours__c</columns>
    <columns>Estimated_Coverage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Approval_Status__c</columns>
    <columns>AI_Recommendation__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Confidence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>